opa-gatekeeper/practices/CT/2-allowed_images-pod.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-is-secure-registry
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    allowedImages:
      - "secure-registry.example.com/"
      - "gcr.io/my-project/"
