opa-gatekeeper/practices/CT/5-MT-unique-labels-pod.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: uniquelabelspod
spec:
  crd:
    spec:
      names:
        kind: UniqueLabelsPod
      validation:
        openAPIV3Schema:
          type: object
          properties:
            label:
              type: string
            namespaces:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package uniquelabelspod

        violation[{"msg": msg}] {
          ns := input.review.object.metadata.namespace
          input.parameters.namespaces[_] == ns
          label_key := input.parameters.label
          input_label_value := input.review.object.metadata.labels[label_key]
          other_pod := data.inventory.namespace[ns]["v1"]["Pod"][pod]
          other_pod.metadata.name != input.review.object.metadata.name
          other_pod.metadata.labels[label_key] == input_label_value
          msg := sprintf("Label '%v' with value '%v' must be unique in namespace '%v'", [label_key, input_label_value, ns])
        }
